resizing graphs, positioning

--- a/views/app.mustache
+++ b/views/app.mustache
@@ -5,8 +5,10 @@
 </title>
 </head>
 <body>
-  <div id="cpu-graph"></div>
-  <div id="memory-graph"></div>
+  <div id="main-container">
+    <div id="cpu-graph"></div>
+    <div id="memory-graph" style="position: absolute; top: 120;"></div>
+  </div>
 <script id="template" type="x-tmpl-mustache"></script>
 <script src='/public/js/bundle.js'></script>
 </body>
