factoring out duplicate chart code into new component

--- a/views/app.mustache
+++ b/views/app.mustache
@@ -6,7 +6,9 @@
 </head>
 <body>
   <div id="main-container">
-    <div id="cpu-graph"></div>
+    <div id="cpu-chart"></div>
+    <div id="cpu-graph" style="position: absolute; top: 0px;"></div>
+    <div id="memory-chart" style="position: absolute; top: 120;"></div>
     <div id="memory-graph" style="position: absolute; top: 120;"></div>
   </div>
 <script id="template" type="x-tmpl-mustache"></script>
